[package]
name = "orca-rs"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4kr) <h1ghbre4k3r@dev.bre4k3r.de>"]
description = "Implementation of the ORCA algorithm."
license = "MIT"

[dependencies]
ndarray = "0.14"

[lib]
name = "liborca"

[features]
default = ["participant_obstacles"]
# feature for using the participant obstacles
participant_obstacles = []
