[package]
name = "orca-rs"
version = "0.1.2"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4kr) <h1ghbre4k3r@dev.bre4k3r.de>"]
description = "Implementation of the ORCA algorithm."
license = "MIT"
repository = "https://github.com/H1ghBre4k3r/orca-rs"

[dependencies]
ndarray = "0.15.4"

[lib]
name = "orca_rs"

[features]
default = ["participant_obstacles"]
# feature for using the participant obstacles
participant_obstacles = []
