[package]
name = "orca-rs"
version = "0.2.1"
edition = "2021"
authors = ["Louis Meyer (H1ghBre4kr) <h1ghbre4k3r@dev.bre4k3r.de>"]
description = "Implementation of the ORCA algorithm."
license = "MIT"
repository = "https://github.com/H1ghBre4k3r/orca-rs"

[dependencies]
log = "0.4.17"
ndarray = "0.15.4"

[dev-dependencies]
env_logger = "0.9.1"

[lib]
name = "orca_rs"

[features]
default = ["participant_obstacles"]
# feature for using the participant obstacles
participant_obstacles = []
